# simplestChat

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  PROJECT_GOALS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
load_tests/: README.md  mod.rs
load_tests/clients/: README.md  media_generator.rs  metrics.rs  mod.rs  webrtc_client.rs
migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_rooms.sql  004_create_room_roles.sql  005_create_room_states.sql  006_add_session_token_index.sql
src/: db.rs  lib.rs  main.rs  metrics.rs  turn.rs
src/auth/: jwt.rs  mod.rs  password.rs  routes.rs  session.rs  types.rs  webauthn.rs
src/media/: config.rs  mod.rs  router_manager.rs  transport_manager.rs  types.rs  worker_manager.rs
src/room/: api.rs  mod.rs  moderation.rs  roles.rs  settings.rs
src/signaling/: connection.rs  mod.rs  protocol.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/e2e/: README.md  checklist.cjs
web/src/: auth.ts  icons.ts  main.ts  media.ts  protocol.ts  room.ts  signaling.ts  style.css
