[package]
name = "simplestChat"
version = "0.1.0"
edition = "2024"

[dependencies]
mediasoup = "0.20.0"
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8.6", features = ["ws"] }
tokio-tungstenite = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
thiserror = "2.0.17"
num_cpus = "1.17.0"
uuid = { version = "1.18.1", features = ["v4"] }
futures-util = "0.3.31"
webrtc = "0.17.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
mediasoup-types = "0.2.1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono"] }
argon2 = "0.5"
jsonwebtoken = "10"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
url = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "load_test"
path = "load_tests/bin/load_test.rs"
